# BayModTS

./: BayModTS_core.py  BayModTS_data_model.py  BayModTS_requirements.yaml  How_to_apply_BayModTS.py  LICENSE  LICENSE.txt  README.md  RTD_model_sbmlutlis.ipynb  pyproject.toml
amici_models/Control_rtf/: CMakeLists.txt  Control_rtf.cpp  Control_rtf.h  Jy.cpp  Jy.h  compileMexFile.m  create_splines.cpp  dJydsigma.cpp  dJydy.cpp  dJydy.h  dsigmaydp.cpp  dwdp.cpp  dwdp.h  dydp.cpp  k.h  my.h  p.h  setup.py  sigmay.cpp  sigmay.h  w.cpp  w.h  wrapfunctions.cpp  y.cpp  y.h
amici_models/Control_rtf/Control_rtf/: Control_rtf.py  __init__.py
amici_models/Control_rtf/build_model_ext/: .ninja_deps  .ninja_log  CMakeCache.txt  Control_rtfConfig.cmake  build.ninja  cmake_install.cmake  install_manifest.txt
amici_models/Control_rtf/swig/: Control_rtf.i
baymodts/core/: BayModTS_core.py  BayModTS_data_model.py  BayModTS_separate_conditions.py  baymodts.yaml  experimental_conditions_baymodts.tsv  parameters_baymodts.tsv  rtf_identical_response_times.xml  sampling_all_conditions.py
baymodts/examples/liver_volume/: F_baymodts.yaml  F_baymodts_parameters.tsv  RTD_identical_response_times.xml  T_baymodts.yaml  T_baymodts_parameters.tsv  baymodts_experimental_conditions.tsv  baymodts_parameters.tsv
baymodts/examples/perfusion/: BayModTS_separate_conditions.py  CL_rtd_pvl.yaml  LLL_rtd_pvl.yaml  (+12 more)
baymodts/walk_through/: 2021-09-15_Midazolam_Raw_data.xlsx  2Wks_rtf.yaml  Control_rtf.yaml  rtf.xml  rtf_4Wks.yaml  rtf_experimental_conditions.tsv  rtf_observables.tsv  rtf_parameters.tsv
(+130 files in other folders)
